[package]
name = "qubes-streaming"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", tag = "0.24.0", version = "0.24.0" }
gstreamer-app = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", tag = "0.24.0", version = "0.24.0" }
nix = { version = "0.30.1", features = ["poll"] }
signal-hook = { version = "0.3.18", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
